# innerspace

./: .gitignore  Cargo.toml  README.md  build.rs
archive/child/: whitelist.c
fuzz/: .gitignore  Cargo.toml
fuzz/in/: complex.html  hello-world.html  script.html
fuzz/src/: main.rs
notes/: Processing.md  Tag types.md  Text script content.md
src/: err.rs  lib.rs  main.rs  pattern.rs  proc.rs
src/spec/tag/: content.rs  contentfirst.rs  formatting.rs  layout.rs  void.rs  wss.rs
src/spec/tag/child/: blacklist.c
src/spec/tag/parent/: blacklist.c  whitelist.c
src/unit/: bang.rs  comment.rs  content.rs  entity.rs  script.rs  style.rs  tag.rs
src/unit/attr/: mod.rs  value.rs
src/unit/script/: js.rs  mod.rs  text.rs
